Fetch data for profile

--- a/public/style.css
+++ b/public/style.css
@@ -229,7 +229,7 @@ main::-webkit-scrollbar-thumb {
   list-style: none;
   line-height: 20px;
 }
-.more-option .more-icon svg{
+.more-option .more-icon svg {
   width: 22px;
   height: 22px;
   margin: 0 20px;
@@ -514,7 +514,7 @@ main {
 /* User start */
 #users {
   width: 100%;
-  min-height: 70Vh;
+  min-height: 70vh;
   margin: auto;
 }
 .text-head {
@@ -739,6 +739,7 @@ main {
 }
 #profile {
   width: 100%;
+  position: relative;
 }
 #profile .container {
 }
@@ -887,9 +888,9 @@ main {
   padding: 20px 0px;
   border-bottom: 1px solid #b9b9b9;
 }
- /* Pagination  */
+/* Pagination  */
 
- .pagination ul{
+.pagination ul {
   width: 100%;
   display: flex;
   text-align: center;
@@ -898,8 +899,8 @@ main {
   flex-wrap: wrap;
   padding: 8px;
 }
-.pagination ul li{
-  color:#837575;
+.pagination ul li {
+  color: #837575;
   list-style: none;
   height: 40px;
   width: 40px;
@@ -907,32 +908,32 @@ main {
   font-size: 12px;
   padding: 10px;
   font-weight: 500;
-  border: 1px solid #D8D8D8;
+  border: 1px solid #d8d8d8;
   box-sizing: border-box;
   border-radius: 15px;
   cursor: pointer;
   user-select: none;
   transition: all 0.3s ease;
 }
-.pagination a{
+.pagination a {
   text-decoration: none;
   color: #837575;
 }
-.pagination .page-active li{
-  border: 1px solid  var(--primary);
+.pagination .page-active li {
+  border: 1px solid var(--primary);
   background-color: #0095ff0e;
-  color:  var(--primary);
+  color: var(--primary);
 }
-.next::before{
+.next::before {
   content: url("/icons/next.svg");
 }
-.last::before{
+.last::before {
   content: url("/icons/last.svg");
 }
-.first::before{
+.first::before {
   content: url("/icons/first.svg");
 }
-.prev::before{
+.prev::before {
   content: url("/icons/prev.svg");
 }
 
@@ -964,7 +965,7 @@ main {
   .sidebar {
     display: none;
   }
-  .nav-link svg{
+  .nav-link svg {
     width: 50px;
     height: 50px;
   }
@@ -1125,7 +1126,7 @@ main {
     width: 280px;
     margin: 8px;
   }
-  .pagination ul li{
+  .pagination ul li {
     height: 36px;
     width: 36px;
     margin: 3px;
