add new views for active , forget

--- a/views/pages/new-password.ejs
+++ b/views/pages/new-password.ejs
@@ -1,20 +1,41 @@
-<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <form action="/update-password" method="POST">
-    <h2>New Password</h2>
-    <h4>
-      How do you want to receive the code to reset your password?</h4>
-    <label for="pass"></label>
-    <input id="pass" name='email' value="<%= email && email %> " type="hidden">
-    <input id="pass" name='password' type="text">
-    <button type="submit">continue</button>
-  </form>
-</body>
-</html>
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/style.css">
+    <title>Document</title>
+  </head>
+  <body>
+    <div id="search-modal">
+      <div class="search-modal-box">
+          <form action="/update-password" method="post">
+          <div class="login-logo">
+            <%- include("../partials/icons/oclock-logo.ejs"); -%>          
+          </div>
+          <hr>
+          <div class="active-details">
+            <div id="details" class="search-details">
+              Here you can set new password for signing in to Oclock space Make sure you remember this password and keep it in a safe place.
+            </div>
+          <div id="mail-input" class="email-input">
+            <input required id="pass" name='password' type="text">
+          </div>
+          <input id="pass" name='email' value="<%= email && email %> " type="hidden">
+          <div id="error-msg"></div>
+        </div>
+        <hr>
+          <div class="btn-box">
+            <button id="continue-btn" type="submit"  class="search-btn btn">Set new password</button>            
+          </div>
+          </form>
+      </div>
+      <script>
+        const password = document.getElementById("pass").value
+        const errorMsg = document.getElementById("error-msg")
+        if(password.length>1){
+          errorMsg.innerHtml = "Password is required"
+        }
+      </script>
+  </body>
+  </html>
