--- a/views/pages/find-user.ejs
+++ b/views/pages/find-user.ejs
@@ -9,12 +9,11 @@
  
 </head>
 <body>
-  <form action="/find-user" method="POST">
+  <form action="/f" method="POST">
     <h2>Find Your account</h2>
     <h4>Please enter your email address or mobile number to search for your account.</h4>
     <label for="find"></label>
     <input id="find" name="email" type="text" placeholder="Username or email">
     <button type="submit">Find</button>
-  </form>
 </body>
 </html>
