--- a/views/partials/icons/facebook-svg.ejs
+++ b/views/partials/icons/facebook-svg.ejs
@@ -1,22 +1,22 @@
 <svg
-  width="40"
-  height="40"
-  viewBox="0 0 30 30"
-  fill="none"
-  xmlns="http://www.w3.org/2000/svg"
->
-  <path
-    d="M17.6667 11.4V15.2667H21.1333C21.4 15.2667 21.5333 15.5333 21.5333 15.8L21 18.3333C21 18.4667 20.7333 18.6 20.6 18.6H17.6667V28.3333H13.6667V18.7333H11.4C11.1333 18.7333 11 18.6 11 18.3333V15.8C11 15.5333 11.1333 15.4 11.4 15.4H13.6667V11C13.6667 8.73333 15.4 7 17.6667 7H21.2667C21.5333 7 21.6667 7.13333 21.6667 7.4V10.6C21.6667 10.8667 21.5333 11 21.2667 11H18.0667C17.8 11 17.6667 11.1333 17.6667 11.4V11.4Z"
-    stroke="#FFFFFF"
-    stroke-width="2"
-    stroke-miterlimit="10"
-    stroke-linecap="round"
-  />
-  <path
-    d="M18.9998 28.3334H10.9998C4.33317 28.3334 1.6665 25.6667 1.6665 19.0001V11.0001C1.6665 4.33341 4.33317 1.66675 10.9998 1.66675H18.9998C25.6665 1.66675 28.3332 4.33341 28.3332 11.0001V19.0001C28.3332 25.6667 25.6665 28.3334 18.9998 28.3334Z"
-    stroke="#FFFFFF"
-    stroke-width="2"
-    stroke-linecap="round"
-    stroke-linejoin="round"
-  />
-</svg>
+              width="30"
+              height="30"
+              viewBox="0 0 30 30"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M17.6667 11.4V15.2667H21.1333C21.4 15.2667 21.5333 15.5333 21.5333 15.8L21 18.3333C21 18.4667 20.7333 18.6 20.6 18.6H17.6667V28.3333H13.6667V18.7333H11.4C11.1333 18.7333 11 18.6 11 18.3333V15.8C11 15.5333 11.1333 15.4 11.4 15.4H13.6667V11C13.6667 8.73333 15.4 7 17.6667 7H21.2667C21.5333 7 21.6667 7.13333 21.6667 7.4V10.6C21.6667 10.8667 21.5333 11 21.2667 11H18.0667C17.8 11 17.6667 11.1333 17.6667 11.4V11.4Z"
+                stroke="#7B81A2"
+                stroke-width="2"
+                stroke-miterlimit="10"
+                stroke-linecap="round"
+              />
+              <path
+                d="M18.9998 28.3334H10.9998C4.33317 28.3334 1.6665 25.6667 1.6665 19.0001V11.0001C1.6665 4.33341 4.33317 1.66675 10.9998 1.66675H18.9998C25.6665 1.66675 28.3332 4.33341 28.3332 11.0001V19.0001C28.3332 25.6667 25.6665 28.3334 18.9998 28.3334Z"
+                stroke="#7B81A2"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              />
+            </svg>
